--- a/Tindog website using Bootstrap/index.html
+++ b/Tindog website using Bootstrap/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-   
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Ubuntu:wght@400;500;700&display=swap"
+    rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" 
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" 
-        crossorigin="anonymous"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
 
   <!-- Bootstrap Scripts -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -51,9 +52,11 @@
 
       <div class="row">
         <div class="col-6">
-          <h1 id="font-change-h1">Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple">&nbsp;&nbsp;</i>Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-buttom"><i class="fab fa-google-play">&nbsp;</i>Download</button>
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i
+              class="fab fa-apple">&nbsp;&nbsp;</i>Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-buttom"><i
+              class="fab fa-google-play">&nbsp;</i>Download</button>
         </div>
         <div class="col-lg-6">
           <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
@@ -67,16 +70,21 @@
   <!-- Features -->
 
   <section id="features">
-
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+    <div class="row">
+      <div class="col-md-4 col-sm-12 feature-div">
+        <i class="fab-light fa-circle-check"></i>
+        <h3>Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="col-md-4 col-sm-12 feature-div">
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="col-md-4 col-sm-12 feature-div">
+        <h3>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
   </section>
 
 
