--- a/Tindog website using Bootstrap/index.html
+++ b/Tindog website using Bootstrap/index.html
@@ -72,17 +72,19 @@
   <section id="features">
     <div class="row">
       <div class="col-md-4 col-sm-12 feature-div">
-        <i class="fab-light fa-circle-check"></i>
+        <i class="icon-fav fa fa-check-circle fa-3x"></i>
         <h3>Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
+        <p class='p-light-wt'>So easy to use, even your dog could do it.</p>
       </div>
       <div class="col-md-4 col-sm-12 feature-div">
+        <i class="icon-fav fas fa-bullseye fa-3x"></i>
         <h3>Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
+        <p class='p-light-wt'>We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="col-md-4 col-sm-12 feature-div">
+        <i class="icon-fav fas fa-heart fa-3x"></i>
         <h3>Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+        <p class='p-light-wt'>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
   </section>
@@ -93,7 +95,7 @@
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
+    <img class="testi-img" src="images/dog-img.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -106,10 +108,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-img" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-img" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
