--- a/Tindog website using Bootstrap/index.html
+++ b/Tindog website using Bootstrap/index.html
@@ -37,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -52,11 +52,11 @@
 
       <div class="row">
         <div class="col-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i
-              class="fab fa-apple">&nbsp;&nbsp;</i>Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-buttom"><i
-              class="fab fa-google-play">&nbsp;</i>Download</button>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-dark btn-lg download-button">
+            <i class="fab fa-apple">&nbsp;</i>Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-buttom">
+            <i class="fab fa-google-play">&nbsp;</i>Download</button>
         </div>
         <div class="col-lg-6">
           <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
@@ -97,7 +97,7 @@
     <div id="carousel-testimonial" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testi-img" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
@@ -135,7 +135,7 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <h4>Simple and affordable price plans for your and your dog.</h4>
 
     <div class="row">
@@ -146,7 +146,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="price-text">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -160,7 +160,7 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="price-text">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -174,7 +174,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="price-text">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -193,9 +193,11 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-headline">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button">
+      <i class="fab fa-apple">&nbsp;</i>Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-buttom">
+      <i class="fab fa-google-play">&nbsp;</i>Download</button>
 
   </section>
 
@@ -204,6 +206,11 @@
 
   <footer id="footer">
 
+    <i class="social-icons fab fa-instagram"></i>
+    <i class="social-icons fab fa-twitter"></i>
+    <i class="social-icons fab fa-facebook-square"></i>
+    <i class="social-icons fas fa-envelope"></i>
+    
     <p>© Copyright TinDog</p>
 
   </footer>
