--- a/Tindog website using Bootstrap/index.html
+++ b/Tindog website using Bootstrap/index.html
@@ -70,20 +70,21 @@
   <!-- Features -->
 
   <section id="features">
+    
     <div class="row">
       <div class="col-md-4 col-sm-12 feature-div">
         <i class="icon-fav fa fa-check-circle fa-3x"></i>
-        <h3>Easy to use.</h3>
+        <h3 class="feature-titles">Easy to use.</h3>
         <p class='p-light-wt'>So easy to use, even your dog could do it.</p>
       </div>
       <div class="col-md-4 col-sm-12 feature-div">
         <i class="icon-fav fas fa-bullseye fa-3x"></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="feature-titles">Elite Clientele</h3>
         <p class='p-light-wt'>We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="col-md-4 col-sm-12 feature-div">
         <i class="icon-fav fas fa-heart fa-3x"></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="feature-titles">Guaranteed to work.</h3>
         <p class='p-light-wt'>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
