--- a/Tindog website using Bootstrap/index.html
+++ b/Tindog website using Bootstrap/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <section id="title">
+  <section class='colored-section' id="title">
 
     <div class="container-fluid">
       <!-- Nav Bar -->
@@ -69,7 +69,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
     
     <div class="row">
       <div class="col-md-4 col-sm-12 feature-div">
@@ -93,7 +93,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="carousel-testimonial" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
@@ -122,7 +122,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
 
     <img class="press-img" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-img" src="images/tnw.png" alt="tnw-logo">
@@ -134,7 +134,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <h4>Simple and affordable price plans for your and your dog.</h4>
@@ -176,10 +176,9 @@
           </div>
           <div class="card-body">
             <h2 class="price-text">$99 / mo</h2>
-            <p>Pirority Listing</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited Matches & Pirority Listing </p>
             <button class="btn btn-lg btn-block btn-primary" type="button">Sign Up</button>
           </div>
         </div>
@@ -192,7 +191,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
     <h3 class="cta-headline">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg download-button">
@@ -205,7 +204,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
 
     <i class="social-icons fab fa-instagram"></i>
     <i class="social-icons fab fa-twitter"></i>
